--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <artifactId>spigot-api</artifactId>
             <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>A
     </dependencies>
 
 </project>
