--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,10 +6,10 @@ api-version: 1.18
 commands:
   coords:
     description: Saves/removes coordinates in the coordinate list
-    usage:
+    usage: |
       /coords save [name]
       /coords set [x] [y] [z]
-      /coords list -> lists all coords
+      /coords list
       /coords get [name]
-      /coords remove [name1] [name2] ... [namex]
+      /coords remove [name1] [name2] [name3] ...
     aliases: [ coord, coordinate, coordinates ]
